--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -9,6 +9,7 @@
 	}
 	
 .tags li, .tags a{
+	list-style-type: none;
 	float:left;
 	height:24px;
 	line-height:24px;
@@ -27,5 +28,11 @@
 	border-bottom-right-radius:4px;
 	-moz-border-radius-topright:4px;
 	-webkit-border-top-right-radius:4px;	
-	border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
 	} 
