--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -7,17 +7,15 @@
 	bottom:-12px;
 	list-style:none;
 	}
-	
-.tags li, .tags a{
-	list-style-type: none;
-	float:left;
+
+.tags span, .tags a{
+	display: inline-block;
 	height:24px;
-	line-height:24px;
-	position:relative;
-	font-size:11px;
-	}
+    line-height:24px;
+}
 	
 .tags a{
+	height:24px;
 	margin-left:20px;
 	padding:0 10px 0 12px;
 	background:#0089e0;
@@ -35,4 +33,9 @@
 	-moz-border-radius-topleft:4px;
 	-webkit-border-top-left-radius:4px;	
 	border-top-left-radius:4px;
-	} 
+	}
+
+.tag_holder div{
+	display:block;
+	overflow:auto;
+}
