--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -1,20 +1,20 @@
 #https://cssglobe.com/pure-css3-post-tags/
-.tags{
+.primary_tags{
 	margin:0;
 	padding:0;
 	position:absolute;
 	right:24px;
 	bottom:-12px;
 	list-style:none;
-	}
+}
 
-.tags span, .tags a{
+.primary_tags span, .primary_tags a{
 	display: inline-block;
 	height:24px;
     line-height:24px;
 }
 	
-.tags a{
+.primary_tags a{
 	height:24px;
 	margin-left:20px;
 	padding:0 10px 0 12px;
@@ -33,8 +33,188 @@
 	-moz-border-radius-topleft:4px;
 	-webkit-border-top-left-radius:4px;	
 	border-top-left-radius:4px;
-	}
+}
+	
+.secondary_tags{
+	margin:0;
+	padding:0;
+	position:absolute;
+	right:24px;
+	bottom:-12px;
+	list-style:none;
+}
 
+.secondary_tags span, .secondary_tags a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.secondary_tags a{
+	height:24px;
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#66b8ec;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.primary_artists{
+	margin:0;
+	padding:0;
+	position:absolute;
+	right:24px;
+	bottom:-12px;
+	list-style:none;
+}
+
+.primary_artists span, .primary_artists a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.primary_artists a{
+	height:24px;
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#7e7e7e;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+	
+.secondary_artists{
+	margin:0;
+	padding:0;
+	position:absolute;
+	right:24px;
+	bottom:-12px;
+	list-style:none;
+}
+
+.secondary_artists span, .secondary_artists a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.secondary_artists a{
+	height:24px;
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#b1b1b1;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.primary_series{
+	margin:0;
+	padding:0;
+	position:absolute;
+	right:24px;
+	bottom:-12px;
+	list-style:none;
+}
+
+.primary_series span, .primary_series a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.primary_series a{
+	height:24px;
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#51a700;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+	
+.secondary_series{
+	margin:0;
+	padding:0;
+	position:absolute;
+	right:24px;
+	bottom:-12px;
+	list-style:none;
+}
+
+.secondary_series span, .secondary_series a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.secondary_series a{
+	height:24px;
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#96ca66;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+	
 .tag_holder div{
 	display:block;
 	overflow:auto;
