Renamed CSS class for volume so it doesn't conflict with login/registration pages.
Moved form contents for creating/editing a collection into a partial.

--- a/public/css/volume.css
+++ b/public/css/volume.css
@@ -27,7 +27,7 @@ button.accordion.active:after {
     content: "\2212";
 }
 
-div.panel {
+div.volume_panel {
     padding: 0 18px;
     background-color: white;
     max-height: 0;
