Modify the show blade for collections to better display chapter information.

--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -143,7 +143,7 @@
 	height:24px;
 	margin-left:5px;
 	padding:0 10px 0 12px;
-	background:#cd595a;
+	background:#96ca66;
 	color:#fff;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
@@ -198,7 +198,7 @@
 	height:24px;
 	margin-left:5px;
 	padding:0 10px 0 12px;
-	background:#96ca66;
+	background:#f98d8d;
 	color:#fff;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
