--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -215,6 +215,32 @@
 	border-top-left-radius:4px;
 }
 
+.source_tag span, .source_tag a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.source_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#ffa500;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
 
 .tag_count{
 	color:#efefef;
