--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -106,6 +106,60 @@
 	border-top-left-radius:4px;
 }
 
+.primary_characters span, .primary_characters a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.primary_characters a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#ff3232;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.secondary_characters span, .secondary_characters a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.secondary_characters a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#ff6666;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
 .primary_series span, .primary_series a{
 	display: inline-block;
 	height:24px;
@@ -247,6 +301,10 @@
 }
 
 .artist_count{
+	color:#efefef;
+}
+
+.character_count{
 	color:#efefef;
 }
 
