--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -1,63 +1,3 @@
-.primary_tags span, .primary_tags a{
-	display: inline-block;
-	height:24px;
-    line-height:24px;
-}
-	
-.primary_tags a{
-	height:24px;
-	margin-left:5px;
-	padding:0 10px 0 12px;
-	background:#0089e0;
-	color:#fff;
-	text-decoration:none;
-	-moz-border-radius-bottomright:4px;
-	-webkit-border-bottom-right-radius:4px;	
-	border-bottom-right-radius:4px;
-	-moz-border-radius-topright:4px;
-	-webkit-border-top-right-radius:4px;	
-	border-top-right-radius:4px;
-	-moz-border-radius-bottomleft:4px;
-	-webkit-border-bottom-left-radius:4px;	
-	border-bottom-left-radius:4px;
-	-moz-border-radius-topleft:4px;
-	-webkit-border-top-left-radius:4px;	
-	border-top-left-radius:4px;
-}
-	
-.secondary_tags span, .secondary_tags a{
-	display: inline-block;
-	height:24px;
-    line-height:24px;
-}
-	
-.secondary_tags a{
-	height:24px;
-	margin-left:5px;
-	padding:0 10px 0 12px;
-	background:#66b8ec;
-	color:#fff;
-	text-decoration:none;
-	-moz-border-radius-bottomright:4px;
-	-webkit-border-bottom-right-radius:4px;	
-	border-bottom-right-radius:4px;
-	-moz-border-radius-topright:4px;
-	-webkit-border-top-right-radius:4px;	
-	border-top-right-radius:4px;
-	-moz-border-radius-bottomleft:4px;
-	-webkit-border-bottom-left-radius:4px;	
-	border-bottom-left-radius:4px;
-	-moz-border-radius-topleft:4px;
-	-webkit-border-top-left-radius:4px;	
-	border-top-left-radius:4px;
-}
-
-.primary_artists span, .primary_artists a{
-	display: inline-block;
-	height:24px;
-    line-height:24px;
-}
-	
 .primary_artists a{
 	height:24px;
 	margin-left:5px;
@@ -106,6 +46,70 @@
 	border-top-left-radius:4px;
 }
 
+.combined_artists span, .combined_artists a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.combined_artists a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#7e7e7e;
+	color:#b1b1b1;
+	border-style: solid;
+	border-color:#b1b1b1;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_combined_artists span, .not_combined_artists a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.not_combined_artists a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#b1b1b1;
+	color:#7e7e7e;
+	border-style: solid;
+	border-color:#7e7e7e;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.primary_artists span, .primary_artists a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
 .primary_characters span, .primary_characters a{
 	display: inline-block;
 	height:24px;
@@ -145,6 +149,176 @@
 	padding:0 10px 0 12px;
 	background:#ff6666;
 	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.combined_characters span, .combined_characters a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.combined_characters a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#ff3232;
+	color:#ff6666;
+	border-style: solid;
+	border-color:#ff6666;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_combined_characters span, .not_combined_characters a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.not_combined_characters a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#ff6666;
+	color:#ff3232;
+	border-style: solid;
+	border-color:#ff3232;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.primary_scanalators span, .primary_scanalators a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.primary_scanalators a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#d77a7a;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+	
+.secondary_scanalators span, .secondary_scanalators a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+	
+.secondary_scanalators a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#f98d8d;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.combined_scanalators span, .combined_scanalators a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.combined_scanalators a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#d77a7a;
+	color:#f98d8d;
+	border-style: solid;
+	border-color:#f98d8d;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_combined_scanalators span, .not_combined_scanalators a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.not_combined_scanalators a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#f98d8d;
+	color:#d77a7a;
+	border-color:#d77a7a;
+	border-style: solid;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
 	-webkit-border-bottom-right-radius:4px;	
@@ -214,18 +388,75 @@
 	border-top-left-radius:4px;
 }
 
+.combined_series span, .combined_series a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
 
-.primary_scanalators span, .primary_scanalators a{
+.combined_series a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#51a700;
+	color:#96ca66;
+	border-style: solid;
+	border-color:#96ca66;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_combined_series span, .not_combined_series a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.not_combined_series a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#96ca66;
+	color:#51a700;
+	border-style: solid;
+	border-color:#51a700;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.primary_tags span, .primary_tags a{
 	display: inline-block;
 	height:24px;
     line-height:24px;
 }
 	
-.primary_scanalators a{
+.primary_tags a{
 	height:24px;
 	margin-left:5px;
 	padding:0 10px 0 12px;
-	background:#d77a7a;
+	background:#0089e0;
 	color:#fff;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
@@ -242,18 +473,76 @@
 	border-top-left-radius:4px;
 }
 	
-.secondary_scanalators span, .secondary_scanalators a{
+.secondary_tags span, .secondary_tags a{
 	display: inline-block;
 	height:24px;
     line-height:24px;
 }
 	
-.secondary_scanalators a{
+.secondary_tags a{
 	height:24px;
 	margin-left:5px;
 	padding:0 10px 0 12px;
-	background:#f98d8d;
+	background:#66b8ec;
 	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.combined_tags span, .combined_tags a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.combined_tags a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#0089e0;
+	color:#66b8ec;
+	border-style: solid;
+	border-color:#66b8ec;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_combined_tags span, .not_combined_tags a{
+	display: inline-block;
+	height:24px;
+    line-height:24px;
+}
+
+.not_combined_tags a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#66b8ec;
+	color:#0089e0;
+	border-style: solid;
+	border-color:#0089e0;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
 	-webkit-border-bottom-right-radius:4px;	
@@ -540,6 +829,213 @@
 	color:#66b8ec;
 	border-style: solid;
 	border-color:#66b8ec;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.language_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_language_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#000;
+	color:#fff;
+	border-style: solid;
+	border-color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.rating_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_rating_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#000;
+	color:#fff;
+	border-style: solid;
+	border-color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.status_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_status_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#000;
+	color:#fff;
+	border-style: solid;
+	border-color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.canonical_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_canonical_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#000;
+	color:#fff;
+	border-style: solid;
+	border-color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.invalid_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
 	-webkit-border-bottom-right-radius:4px;	
