--- a/public/css/volume.css
+++ b/public/css/volume.css
@@ -1,4 +1,5 @@
-button.accordion {
+/* Closed accordion */
+button.closedAccordion {
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -11,11 +12,11 @@ button.accordion {
     transition: 0.4s;
 }
 
-button.accordion.active, button.accordion:hover {
+button.closedAccordion.active, button.closedAccordion:hover {
     background-color: #ddd;
 }
 
-button.accordion:after {
+button.closedAccordion:after {
     content: '\002B';
     color: #777;
     font-weight: bold;
@@ -23,7 +24,7 @@ button.accordion:after {
     margin-left: 5px;
 }
 
-button.accordion.active:after {
+button.closedAccordion.active:after {
     content: "\2212";
 }
 
@@ -33,4 +34,35 @@ div.volume_panel {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+
+/* Open accordions */
+
+button.openAccordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 8px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+button.openAccordion.active, button.openAccordion:hover {
+  background-color: #ddd;
+}
+
+button.openAccordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+button.openAccordion.active:after {
+  content: "\2212";
 }
