--- a/public/css/tag.css
+++ b/public/css/tag.css
@@ -1028,6 +1028,52 @@
 	border-top-left-radius:4px;
 }
 
+.favourite_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#fff;
+	color:#000;
+	border-style: solid;
+	border-color:#000;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
+.not_favourite_tag a{
+	height:24px;
+	margin-left:5px;
+	padding:0 10px 0 12px;
+	background:#000;
+	color:#fff;
+	border-style: solid;
+	border-color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;	
+	border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;	
+	border-top-left-radius:4px;
+}
+
 .invalid_tag a{
 	height:24px;
 	margin-left:5px;
